# reversi

./: .gitignore  Cargo.toml
crates/cli/: Cargo.toml
crates/cli/src/: cli.rs  main.rs  player.rs  traits.rs
crates/com/: Cargo.toml  build.rs
crates/com/src/: com.rs  evaluator.rs  lib.rs
crates/com/src/evaluator/: count.rs  weight.rs
crates/core/: Cargo.toml  build.rs
crates/core/benches/: benchmark.rs
crates/core/src/: board.rs  com.rs  evaluator.rs  game.rs  lib.rs  traits.rs
crates/core/src/board/: color.rs  direction.rs  pos.rs
crates/dump/: Cargo.toml
crates/dump/src/: main.rs
crates/gui/: Cargo.toml
crates/gui/src/: app.rs  lib.rs  main.rs  player.rs
crates/gui/src/app/: game.rs
crates/gui/src/app/game/: config.rs  play.rs
crates/gui/src/app/game/play/: board.rs
crates/learn/: Cargo.toml
crates/learn/src/: main.rs
