[package]
name = "reversi-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bench]]
name = "benchmark"
harness = false

[dependencies]
thiserror = "1.0.30"

[dev-dependencies]
criterion = { version = "0.3.5", features = ["html_reports"] }
