[package]
name = "reversi-learn"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "reversi-learn"
path = "src/main.rs"

[dependencies]
argh = "0.1.6"
rand = "0.8.4"
reversi-core = { path = "../core" }
reversi-com = { path = "../com" }
rayon = "1.5.1"
